[gd_scene load_steps=61 format=2]

[ext_resource path="res://actor/enemies/undead_warrior/undead_warrior.gd" type="Script" id=1]
[ext_resource path="res://actor/ai/ai_base.gd" type="Script" id=2]
[ext_resource path="res://actor/state_machine/state_machine.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor/state_machine/state/walk.gd" type="Script" id=4]
[ext_resource path="res://actor/state_machine/state/idle.gd" type="Script" id=5]
[ext_resource path="res://actor/state_machine/state/hurt.gd" type="Script" id=6]
[ext_resource path="res://actor/state_machine/state/monster_attack.gd" type="Script" id=7]
[ext_resource path="res://actor/state_machine/state/dead.gd" type="Script" id=8]
[ext_resource path="res://actor/input_state_manage.tscn" type="PackedScene" id=9]
[ext_resource path="res://actor/debug_labe.tscn" type="PackedScene" id=10]
[ext_resource path="res://actor/detect_info.gd" type="Script" id=11]
[ext_resource path="res://weapon_system/weapon_system.tscn" type="PackedScene" id=12]
[ext_resource path="res://weapon_system/weapon/sword.gd" type="Script" id=13]
[ext_resource path="res://actor/animations.gd" type="Script" id=14]
[ext_resource path="res://effect/splash_blood_effect/splash_blood_effect.tscn" type="PackedScene" id=15]
[ext_resource path="res://actor/player/animation_body.tscn" type="PackedScene" id=16]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-idle-00.png" type="Texture" id=17]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-idle-01.png" type="Texture" id=18]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-idle-02.png" type="Texture" id=19]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-idle-03.png" type="Texture" id=20]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-attack-00.png" type="Texture" id=21]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-attack-01.png" type="Texture" id=22]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-attack-02.png" type="Texture" id=23]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-attack-03.png" type="Texture" id=24]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-run-00.png" type="Texture" id=25]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-run-01.png" type="Texture" id=26]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-run-02.png" type="Texture" id=27]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-run-03.png" type="Texture" id=28]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-run-04.png" type="Texture" id=29]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-run-05.png" type="Texture" id=30]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-hurt-00.png" type="Texture" id=31]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-hurt-01.png" type="Texture" id=32]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-hurt-02.png" type="Texture" id=33]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-die-00.png" type="Texture" id=34]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-die-01.png" type="Texture" id=35]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-die-02.png" type="Texture" id=36]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-die-03.png" type="Texture" id=37]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-die-04.png" type="Texture" id=38]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-die-05.png" type="Texture" id=39]
[ext_resource path="res://actor/enemies/undead_warrior/assets/undead-warrior-die-06.png" type="Texture" id=40]
[ext_resource path="res://effect/blood/blood1.png" type="Texture" id=41]
[ext_resource path="res://effect/blood/blood2.png" type="Texture" id=42]
[ext_resource path="res://effect/blood/blood3.png" type="Texture" id=43]
[ext_resource path="res://effect/blood/blood4.png" type="Texture" id=44]
[ext_resource path="res://effect/blood/blood5.png" type="Texture" id=45]
[ext_resource path="res://effect/blood/blood6.png" type="Texture" id=46]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 8.31999, 12.29 )

[sub_resource type="CircleShape2D" id=2]

radius = 77.4599

[sub_resource type="CircleShape2D" id=3]

radius = 22.5346

[sub_resource type="Animation" id=4]

length = 0.9
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("animation_body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18, 0.36, 0.53, 0.71 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 4, 5, 6 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.52, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0, false ],
"method": "_on_attack_frame"
}, {
"args": [ 0, true ],
"method": "_on_attack_frame"
} ]
}

[sub_resource type="Animation" id=5]

step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("animation_body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.76, 0.92 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=6]

length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("animation_body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.381839 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]

length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("animation_body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]

length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("animation_body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=9]

length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("animation_body:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.13, 0.15, 0.34 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.999429, 0.999429, 1 ), Color( 1, 0.999429, 0.999429, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.999429, 0.999429, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_blood:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "blood" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("animation_blood:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.07, 0.13, 0.19, 0.25, 0.31 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animation_blood:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.19, 0.39 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=11]

animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=12]

animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "blood",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=13]

colors = PoolColorArray( 0.560784, 0.0196078, 0.0196078, 0.674039, 0.505882, 0, 0, 0.758824 )

[sub_resource type="GradientTexture" id=14]

gradient = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]

emission_shape = 2
emission_box_extents = Vector3( 1.4, 2.29, 1 )
flag_disable_z = true
spread = 35.86
flatness = 0.17
gravity = Vector3( 0, 98, 0 )
initial_velocity = 31.39
initial_velocity_random = 0.03
angular_velocity = 1920.22
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 31.9
damping = 13.0
damping_random = 0.03
scale = 2.0
scale_random = 0.86
color_ramp = SubResource( 14 )
hue_variation = 1.0

[node name="undead_warrior" type="KinematicBody2D"]
scale = Vector2( 5, 5 )
collision_layer = 4
collision_mask = 17
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -16.1975 ],
"_edit_vertical_guides_": [ 57.4148 ]
}

[node name="body_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.15 )
shape = SubResource( 1 )

[node name="ai" type="Node" parent="."]
script = ExtResource( 2 )
actor_path = NodePath("..")
is_label_ai = true

[node name="state_machine" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
actor = NodePath("../../undead_warrior")
is_open_input = true

[node name="walk" type="Node" parent="state_machine"]
script = ExtResource( 4 )
speed = 150

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource( 5 )

[node name="hurt" type="Node" parent="state_machine"]
script = ExtResource( 6 )

[node name="attack" type="Node" parent="state_machine"]
script = ExtResource( 7 )

[node name="dead" type="Node" parent="state_machine"]
script = ExtResource( 8 )

[node name="input_state_manage" parent="." instance=ExtResource( 9 )]
is_open_input = true

[node name="debug_label" parent="." instance=ExtResource( 10 )]

[node name="detect_info" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 11 )
attack_distance = 22.5

[node name="nor_wander" type="Node2D" parent="detect_info"]
editor/display_folded = true

[node name="rayc_floor_left" type="RayCast2D" parent="detect_info/nor_wander"]
position = Vector2( -9.32479, 6.52674 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="rayc_wall_left" type="RayCast2D" parent="detect_info/nor_wander"]
position = Vector2( -7.91739, 7.95572 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="rayc_floor_right" type="RayCast2D" parent="detect_info/nor_wander"]
position = Vector2( 9.4432, 6.32335 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="rayc_wall_right" type="RayCast2D" parent="detect_info/nor_wander"]
position = Vector2( 7.5853, 7.68635 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="area2d_see" type="Area2D" parent="detect_info"]
monitorable = false
collision_layer = 4
collision_mask = 2

[node name="collision_polygon2d" type="CollisionShape2D" parent="detect_info/area2d_see"]
shape = SubResource( 2 )

[node name="area2d_attack_range" type="Area2D" parent="detect_info"]
modulate = Color( 0.670588, 0.141176, 0.141176, 1 )
monitoring = false
monitorable = false
collision_layer = 4
collision_mask = 2

[node name="collision_polygon2dD" type="CollisionShape2D" parent="detect_info/area2d_attack_range"]
shape = SubResource( 3 )

[node name="rayc_check_enemy" type="RayCast2D" parent="detect_info"]
enabled = true
cast_to = Vector2( 75, 0 )
collision_mask = 3

[node name="weapon_system" parent="." instance=ExtResource( 12 )]
editor/display_folded = true
visible = false

[node name="sword" type="Node2D" parent="weapon_system"]
script = ExtResource( 13 )
actor_path = NodePath("../..")
animations_path = NodePath("../../animations")

[node name="area2d_atk1" type="Area2D" parent="weapon_system/sword"]
monitoring = false
monitorable = false
collision_layer = 4
collision_mask = 2

[node name="collision_polygon2d" type="CollisionPolygon2D" parent="weapon_system/sword/area2d_atk1"]
polygon = PoolVector2Array( 5.31032, -18.2863, 5.31032, 9.14826, 28.1969, 9.44168, 25.7029, -11.9778 )

[node name="animations" type="Node2D" parent="."]
script = ExtResource( 14 )
actor_path = NodePath("..")

[node name="animation_action" type="AnimationPlayer" parent="animations"]
anims/attack = SubResource( 4 )
anims/dead = SubResource( 5 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="animation_hurt_color" type="AnimationPlayer" parent="animations"]
anims/hurt_effect = SubResource( 9 )

[node name="splash_blood_effect" parent="animations" instance=ExtResource( 15 )]
position = Vector2( -0.165207, -4.74968 )

[node name="animation_body" parent="animations" instance=ExtResource( 16 )]
self_modulate = Color( 1, 0.999429, 0.999429, 1 )
position = Vector2( 14, -8 )
frames = SubResource( 11 )
animation = "hurt"
frame = 2
playing = false
flip_h = true

[node name="animation_blood" type="AnimatedSprite" parent="animations"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 6.492, -3.296 )
scale = Vector2( 0.299, 0.219 )
frames = SubResource( 12 )
animation = "blood"
frame = 5

[node name="particals_blood" type="Particles2D" parent="animations"]
position = Vector2( 0, -3.65 )
emitting = false
amount = 18
lifetime = 0.5
one_shot = true
preprocess = 0.1
speed_scale = 1.5
process_material = SubResource( 15 )

